--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular5-material",
-  "version": "0.0.0",
+  "name": "Lukas Senator's cv",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.4.5",
     "@angular/animations": "^5.1.2",
     "@angular/cdk": "^5.0.2",
     "@angular/common": "^5.0.0",
@@ -23,9 +24,13 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngrx/store": "^5.2.0",
+    "animate.css": "^3.6.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.5",
     "rxjs": "^5.5.2",
+    "typed.js": "^2.0.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
