--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lukas Senator's cv",
+  "name": "Lukas-Senator-cv",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^5.2.0",
     "animate.css": "^3.6.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
